新增 投注单打印完毕通知接口
